# send-to-myself

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: launch.json
.github/workflows/: desktop-build.yml  docker-image.yml
SendToMyself/AppScope/: app.json5
SendToMyself/entry/src/main/: module.json5
apps/api/: .env.example  package.json
apps/api/drizzle/: 0000_tiny_living_mummy.sql  0001_gigantic_kinsey_walden.sql  0002_curved_raider.sql
apps/api/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
apps/api/src/: app.ts  env.ts  index.ts
apps/api/src/db/: client.ts  migrate.ts  schema.ts
apps/api/src/lib/: auth.ts  id.ts  mapper.ts  ssrf.ts  storage.ts  thumbnail.ts
apps/api/src/middleware/: require-auth.ts
apps/api/src/realtime/: bus.ts
apps/api/src/routes/: attachments.ts  auth.ts  items.ts  preview.ts  realtime.ts
apps/api/src/services/: attachments.ts  items.ts  preview.ts
apps/desktop/: README.md  index.html
apps/desktop/src/: main.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: main.tsx  router.tsx
apps/web/src/lib/: api.ts  (+3 more)
deploy/: Caddyfile  docker-compose.caddy.yml  docker-compose.yml
docs/: DEPLOY.md  HARMONY_SHELL.md  RESEARCH.md  SPEC.md  VERSIONING.md
scripts/: backup.sh  restore.sh
(+29 files in other folders)
