[package]
name = "send-to-myself"
version = "0.1.0"
description = "SendToMyself 桌面薄壳"
authors = ["Xinyu Du"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# lib 名与 bin 名不能同名（Windows 限制，见 rust-lang/cargo#8519），故加 _lib 后缀。
name = "sendtomyself_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

